Version 1.4.4
    * not released yet
    * added ctrl/shift + insert shortcuts to copy/paste in webview
    * fixed: crash with Oxygen theme when closing windows with tabs on top
    * fixed: saving IgnoreAllSSLWarnings option from SSLManager

Version 1.4.3
    * released 9 May 2013
    * fixed: crash upon closing private browsing window
    * fixed: element hiding rules not working when more than 5000 in subscription
    * fixed: saving some tab icons in session file
    * fixed: make Acid3 test pass even with AdBlock enabled
    * mac: attempt to fix slow scrolling on trackpad

Version 1.4.2
    * released 22 April 2013
    * don't limit speed of loading animation in tabbar
    * fixed loading HTML5 videos on YouTube
    * fixed saving cursive font in fonts preferences
    * fixed translating edit actions in page context menu
    * fixed connecting to older secured servers by forcing older SSL protocol
    * fixed installing bash completions to correct folder
    * fixed deleting lockfile upon closing application
    * fixed occasional crash when extracting form data from page
    * fixed crash in akn plugin while closing tab with labels shown
    * fixed crash on close when tabs on top is enabled with oxygen theme
    * GreaseMonkey: fixed laoding scripts with last line commented
    * mac: correctly refreshing state of menus
    * mac: added dock menu with basic actions

Version 1.4.1
    * released 15 March 2013
    * fixed websearchbar not respecting select all on click settings
    * fixed certificates from custom path disappearing on saving preferences
    * fixed showing empty back/forward history menu upon restoring session
    * fixed duplicating current url in history when restoring session
    * fixed instantly showing popup when clicking on back/forward button

Version 1.4.0
    * released 11 March 2013
    * highlighting host in address in locationbar
    * can now be compiled using Qt 5