@@ -79,8 +79,6 @@ public:
 
     int normalTabsCount() const;
     int pinnedTabsCount() const;
-
-    void showTabBar();
     int lastTabIndex() const;
 
     void showNavigationBar(QWidget* bar);
@@ -131,15 +129,11 @@ private slots:
 private:
     inline bool validIndex(int index) const { return index >= 0 && index < count(); }
 
-    void tabInserted(int index);
-    void tabRemoved(int index);
-
     void resizeEvent(QResizeEvent* e);
 
     WebTab* weTab();
     WebTab* weTab(int index);
 
-    bool m_hideTabBarWithOneTab;
     bool m_dontQuitWithOneTab;
     bool m_closedInsteadOpened;
     bool m_newTabAfterActive;
