@@ -160,15 +160,11 @@ void WebView::setPage(QWebPage* page)
 
     mApp->plugins()->emitWebPageCreated(m_page);
 
-    /* Set white background by default.
-       Fixes issue with dark themes.
-
-       See #602
-     */
+    // Set white background by default.
+    // Fixes issue with dark themes. See #602
     QPalette pal = palette();
     pal.setBrush(QPalette::Base, Qt::white);
     page->setPalette(pal);
-
 }
 
 void WebView::load(const QUrl &url)
