@@ -1,6 +1,7 @@
 Version 1.4.4
     * not released yet
     * added ctrl/shift + insert shortcuts to copy/paste in webview
+    * fixed: hide tabbar with only one tab option now works in fullscreen
     * fixed: crash with Oxygen theme when closing windows with tabs on top
     * fixed: saving IgnoreAllSSLWarnings option from SSLManager
 
